--- a/xiaomi test.html
+++ b/xiaomi test.html
@@ -6,7 +6,13 @@
    
 </head>
 <body>
-     <h1>xiaomi is a nice name,not a phone.</h1>
+	 <h1>About xiaomi</h1>
+     <h2>xiaomi is a nice name,not a phone.</h2>
+    <div class="member">
+        <img src="image/xiaomi.jpg" class="portrait"/>
+           <div class="pinfo">
+           </div>
+    </div>                                
                     
 </body>
 </html>
